sintatica.output
State 27 conflicts: 2 shift/reduce, 14 reduce/reduce
State 28 conflicts: 2 shift/reduce
State 30 conflicts: 2 shift/reduce
State 31 conflicts: 2 shift/reduce
State 32 conflicts: 4 shift/reduce
State 43 conflicts: 2 shift/reduce
State 84 conflicts: 1 reduce/reduce


Grammar

    0 $accept: S $end

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO

    2 BLOCO: '{' COMANDOS '}'

    3 COMANDOS: COMANDO COMANDOS
    4         | ε

    5 COMANDO: DECLARACAO ';'
    6        | ATRIB ';'
    7        | EXPR ';'

    8 DECLARACAO: DECLAR_VAR

    9 TIPO: TK_TIPO_INT
   10     | TK_TIPO_FLOAT
   11     | TK_TIPO_CHAR
   12     | TK_TIPO_BOOL

   13 DECLAR_VAR: TIPO TK_ID
   14           | TIPO TK_ID '=' EXPR_SOMA
   15           | TIPO TK_ID '=' TK_CHAR
   16           | TIPO TK_ID '=' EXPR_BOOL

   17 ATRIB: TK_ID '=' EXPR

   18 EXPR: EXPR_SOMA
   19     | EXPR_BOOL

   20 EXPR_SOMA: EXPR_SOMA '+' EXPR_MULT
   21          | EXPR_SOMA '-' EXPR_MULT
   22          | EXPR_MULT

   23 EXPR_MULT: EXPR_MULT '*' EXPR_ATOM
   24          | EXPR_MULT '/' EXPR_ATOM
   25          | EXPR_ATOM

   26 EXPR_BOOL: EXPR_LOG

   27 EXPR_LOG: EXPR_LOG TK_AND EXPR_IGUAL
   28         | EXPR_LOG TK_OR EXPR_IGUAL
   29         | EXPR_IGUAL

   30 EXPR_IGUAL: EXPR_IGUAL TK_IGUAL EXPR_COMP
   31           | EXPR_IGUAL TK_DIFERENTE EXPR_COMP
   32           | EXPR_COMP

   33 EXPR_COMP: EXPR_COMP '>' EXPR_NOT
   34          | EXPR_COMP '<' EXPR_NOT
   35          | EXPR_COMP TK_MAIOR_IGUAL EXPR_NOT
   36          | EXPR_COMP TK_MENOR_IGUAL EXPR_NOT
   37          | EXPR_NOT

   38 EXPR_NOT: '!' EXPR_NOT
   39         | EXPR_SOMA

   40 EXPR_ATOM: '(' EXPR ')'
   41          | '-' EXPR
   42          | TK_NUM
   43          | TK_ID
   44          | COVERT_TYPE
   45          | TK_BOOL_TRUE
   46          | TK_BOOL_FALSE

   47 COVERT_TYPE: TK_TIPO_INT '(' EXPR ')'
   48            | TK_TIPO_FLOAT '(' EXPR ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 38
    '(' (40) 1 40 47 48
    ')' (41) 1 40 47 48
    '*' (42) 23
    '+' (43) 20
    '-' (45) 21 41
    '/' (47) 24
    ';' (59) 5 6 7
    '<' (60) 34
    '=' (61) 14 15 16 17
    '>' (62) 33
    '{' (123) 2
    '}' (125) 2
    error (256)
    TK_NUM (258) 42
    TK_ID (259) 13 14 15 16 17 43
    TK_TIPO_INT (260) 1 9 47
    TK_TIPO_FLOAT (261) 10 48
    TK_MAIN (262) 1
    TK_TIPO_CHAR (263) 11
    TK_TIPO_BOOL (264) 12
    TK_IGUAL (265) 30
    TK_DIFERENTE (266) 31
    TK_MAIOR_IGUAL (267) 35
    TK_MENOR_IGUAL (268) 36
    TK_AND (269) 27
    TK_OR (270) 28
    TK_CHAR (271) 15
    TK_BOOL_TRUE (272) 45
    TK_BOOL_FALSE (273) 46
    UMINUS (274)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    S (34)
        on left: 1
        on right: 0
    BLOCO (35)
        on left: 2
        on right: 1
    COMANDOS (36)
        on left: 3 4
        on right: 2 3
    COMANDO (37)
        on left: 5 6 7
        on right: 3
    DECLARACAO (38)
        on left: 8
        on right: 5
    TIPO (39)
        on left: 9 10 11 12
        on right: 13 14 15 16
    DECLAR_VAR (40)
        on left: 13 14 15 16
        on right: 8
    ATRIB (41)
        on left: 17
        on right: 6
    EXPR (42)
        on left: 18 19
        on right: 7 17 40 41 47 48
    EXPR_SOMA (43)
        on left: 20 21 22
        on right: 14 18 20 21 39
    EXPR_MULT (44)
        on left: 23 24 25
        on right: 20 21 22 23 24
    EXPR_BOOL (45)
        on left: 26
        on right: 16 19
    EXPR_LOG (46)
        on left: 27 28 29
        on right: 26 27 28
    EXPR_IGUAL (47)
        on left: 30 31 32
        on right: 27 28 29 30 31
    EXPR_COMP (48)
        on left: 33 34 35 36 37
        on right: 30 31 32 33 34 35 36
    EXPR_NOT (49)
        on left: 38 39
        on right: 33 34 35 36 37 38
    EXPR_ATOM (50)
        on left: 40 41 42 43 44 45 46
        on right: 23 24 25
    COVERT_TYPE (51)
        on left: 47 48
        on right: 44


State 0

    0 $accept: • S $end

    TK_TIPO_INT  shift, and go to state 1

    S  go to state 2


State 1

    1 S: TK_TIPO_INT • TK_MAIN '(' ')' BLOCO

    TK_MAIN  shift, and go to state 3


State 2

    0 $accept: S • $end

    $end  shift, and go to state 4


State 3

    1 S: TK_TIPO_INT TK_MAIN • '(' ')' BLOCO

    '('  shift, and go to state 5


State 4

    0 $accept: S $end •

    $default  accept


State 5

    1 S: TK_TIPO_INT TK_MAIN '(' • ')' BLOCO

    ')'  shift, and go to state 6


State 6

    1 S: TK_TIPO_INT TK_MAIN '(' ')' • BLOCO

    '{'  shift, and go to state 7

    BLOCO  go to state 8


State 7

    2 BLOCO: '{' • COMANDOS '}'

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 10
    TK_TIPO_INT    shift, and go to state 11
    TK_TIPO_FLOAT  shift, and go to state 12
    TK_TIPO_CHAR   shift, and go to state 13
    TK_TIPO_BOOL   shift, and go to state 14
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    $default  reduce using rule 4 (COMANDOS)

    COMANDOS     go to state 20
    COMANDO      go to state 21
    DECLARACAO   go to state 22
    TIPO         go to state 23
    DECLAR_VAR   go to state 24
    ATRIB        go to state 25
    EXPR         go to state 26
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 8

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO •

    $default  reduce using rule 1 (S)


State 9

   42 EXPR_ATOM: TK_NUM •

    $default  reduce using rule 42 (EXPR_ATOM)


State 10

   17 ATRIB: TK_ID • '=' EXPR
   43 EXPR_ATOM: TK_ID •

    '='  shift, and go to state 36

    $default  reduce using rule 43 (EXPR_ATOM)


State 11

    9 TIPO: TK_TIPO_INT •
   47 COVERT_TYPE: TK_TIPO_INT • '(' EXPR ')'

    '('  shift, and go to state 37

    $default  reduce using rule 9 (TIPO)


State 12

   10 TIPO: TK_TIPO_FLOAT •
   48 COVERT_TYPE: TK_TIPO_FLOAT • '(' EXPR ')'

    '('  shift, and go to state 38

    $default  reduce using rule 10 (TIPO)


State 13

   11 TIPO: TK_TIPO_CHAR •

    $default  reduce using rule 11 (TIPO)


State 14

   12 TIPO: TK_TIPO_BOOL •

    $default  reduce using rule 12 (TIPO)


State 15

   45 EXPR_ATOM: TK_BOOL_TRUE •

    $default  reduce using rule 45 (EXPR_ATOM)


State 16

   46 EXPR_ATOM: TK_BOOL_FALSE •

    $default  reduce using rule 46 (EXPR_ATOM)


State 17

   41 EXPR_ATOM: '-' • EXPR

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR         go to state 42
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 18

   38 EXPR_NOT: '!' • EXPR_NOT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_NOT     go to state 44
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 19

   40 EXPR_ATOM: '(' • EXPR ')'

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR         go to state 45
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 20

    2 BLOCO: '{' COMANDOS • '}'

    '}'  shift, and go to state 46


State 21

    3 COMANDOS: COMANDO • COMANDOS

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 10
    TK_TIPO_INT    shift, and go to state 11
    TK_TIPO_FLOAT  shift, and go to state 12
    TK_TIPO_CHAR   shift, and go to state 13
    TK_TIPO_BOOL   shift, and go to state 14
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    $default  reduce using rule 4 (COMANDOS)

    COMANDOS     go to state 47
    COMANDO      go to state 21
    DECLARACAO   go to state 22
    TIPO         go to state 23
    DECLAR_VAR   go to state 24
    ATRIB        go to state 25
    EXPR         go to state 26
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 22

    5 COMANDO: DECLARACAO • ';'

    ';'  shift, and go to state 48


State 23

   13 DECLAR_VAR: TIPO • TK_ID
   14           | TIPO • TK_ID '=' EXPR_SOMA
   15           | TIPO • TK_ID '=' TK_CHAR
   16           | TIPO • TK_ID '=' EXPR_BOOL

    TK_ID  shift, and go to state 49


State 24

    8 DECLARACAO: DECLAR_VAR •

    $default  reduce using rule 8 (DECLARACAO)


State 25

    6 COMANDO: ATRIB • ';'

    ';'  shift, and go to state 50


State 26

    7 COMANDO: EXPR • ';'

    ';'  shift, and go to state 51


State 27

   18 EXPR: EXPR_SOMA •
   20 EXPR_SOMA: EXPR_SOMA • '+' EXPR_MULT
   21          | EXPR_SOMA • '-' EXPR_MULT
   39 EXPR_NOT: EXPR_SOMA •

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53

    TK_IGUAL        reduce using rule 18 (EXPR)
    TK_IGUAL        [reduce using rule 39 (EXPR_NOT)]
    TK_DIFERENTE    reduce using rule 18 (EXPR)
    TK_DIFERENTE    [reduce using rule 39 (EXPR_NOT)]
    TK_MAIOR_IGUAL  reduce using rule 18 (EXPR)
    TK_MAIOR_IGUAL  [reduce using rule 39 (EXPR_NOT)]
    TK_MENOR_IGUAL  reduce using rule 18 (EXPR)
    TK_MENOR_IGUAL  [reduce using rule 39 (EXPR_NOT)]
    TK_AND          reduce using rule 18 (EXPR)
    TK_AND          [reduce using rule 39 (EXPR_NOT)]
    TK_OR           reduce using rule 18 (EXPR)
    TK_OR           [reduce using rule 39 (EXPR_NOT)]
    '<'             reduce using rule 18 (EXPR)
    '<'             [reduce using rule 39 (EXPR_NOT)]
    '>'             reduce using rule 18 (EXPR)
    '>'             [reduce using rule 39 (EXPR_NOT)]
    '+'             [reduce using rule 18 (EXPR)]
    '+'             [reduce using rule 39 (EXPR_NOT)]
    '-'             [reduce using rule 18 (EXPR)]
    '-'             [reduce using rule 39 (EXPR_NOT)]
    '*'             reduce using rule 18 (EXPR)
    '*'             [reduce using rule 39 (EXPR_NOT)]
    '/'             reduce using rule 18 (EXPR)
    '/'             [reduce using rule 39 (EXPR_NOT)]
    ')'             reduce using rule 18 (EXPR)
    ')'             [reduce using rule 39 (EXPR_NOT)]
    ';'             reduce using rule 18 (EXPR)
    ';'             [reduce using rule 39 (EXPR_NOT)]
    $default        reduce using rule 18 (EXPR)


State 28

   22 EXPR_SOMA: EXPR_MULT •
   23 EXPR_MULT: EXPR_MULT • '*' EXPR_ATOM
   24          | EXPR_MULT • '/' EXPR_ATOM

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    '*'       [reduce using rule 22 (EXPR_SOMA)]
    '/'       [reduce using rule 22 (EXPR_SOMA)]
    $default  reduce using rule 22 (EXPR_SOMA)


State 29

   19 EXPR: EXPR_BOOL •

    $default  reduce using rule 19 (EXPR)


State 30

   26 EXPR_BOOL: EXPR_LOG •
   27 EXPR_LOG: EXPR_LOG • TK_AND EXPR_IGUAL
   28         | EXPR_LOG • TK_OR EXPR_IGUAL

    TK_AND  shift, and go to state 56
    TK_OR   shift, and go to state 57

    TK_AND    [reduce using rule 26 (EXPR_BOOL)]
    TK_OR     [reduce using rule 26 (EXPR_BOOL)]
    $default  reduce using rule 26 (EXPR_BOOL)


State 31

   29 EXPR_LOG: EXPR_IGUAL •
   30 EXPR_IGUAL: EXPR_IGUAL • TK_IGUAL EXPR_COMP
   31           | EXPR_IGUAL • TK_DIFERENTE EXPR_COMP

    TK_IGUAL      shift, and go to state 58
    TK_DIFERENTE  shift, and go to state 59

    TK_IGUAL      [reduce using rule 29 (EXPR_LOG)]
    TK_DIFERENTE  [reduce using rule 29 (EXPR_LOG)]
    $default      reduce using rule 29 (EXPR_LOG)


State 32

   32 EXPR_IGUAL: EXPR_COMP •
   33 EXPR_COMP: EXPR_COMP • '>' EXPR_NOT
   34          | EXPR_COMP • '<' EXPR_NOT
   35          | EXPR_COMP • TK_MAIOR_IGUAL EXPR_NOT
   36          | EXPR_COMP • TK_MENOR_IGUAL EXPR_NOT

    TK_MAIOR_IGUAL  shift, and go to state 60
    TK_MENOR_IGUAL  shift, and go to state 61
    '<'             shift, and go to state 62
    '>'             shift, and go to state 63

    TK_MAIOR_IGUAL  [reduce using rule 32 (EXPR_IGUAL)]
    TK_MENOR_IGUAL  [reduce using rule 32 (EXPR_IGUAL)]
    '<'             [reduce using rule 32 (EXPR_IGUAL)]
    '>'             [reduce using rule 32 (EXPR_IGUAL)]
    $default        reduce using rule 32 (EXPR_IGUAL)


State 33

   37 EXPR_COMP: EXPR_NOT •

    $default  reduce using rule 37 (EXPR_COMP)


State 34

   25 EXPR_MULT: EXPR_ATOM •

    $default  reduce using rule 25 (EXPR_MULT)


State 35

   44 EXPR_ATOM: COVERT_TYPE •

    $default  reduce using rule 44 (EXPR_ATOM)


State 36

   17 ATRIB: TK_ID '=' • EXPR

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR         go to state 64
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 37

   47 COVERT_TYPE: TK_TIPO_INT '(' • EXPR ')'

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR         go to state 65
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 38

   48 COVERT_TYPE: TK_TIPO_FLOAT '(' • EXPR ')'

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR         go to state 66
    EXPR_SOMA    go to state 27
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 29
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 39

   43 EXPR_ATOM: TK_ID •

    $default  reduce using rule 43 (EXPR_ATOM)


State 40

   47 COVERT_TYPE: TK_TIPO_INT • '(' EXPR ')'

    '('  shift, and go to state 37


State 41

   48 COVERT_TYPE: TK_TIPO_FLOAT • '(' EXPR ')'

    '('  shift, and go to state 38


State 42

   41 EXPR_ATOM: '-' EXPR •

    $default  reduce using rule 41 (EXPR_ATOM)


State 43

   20 EXPR_SOMA: EXPR_SOMA • '+' EXPR_MULT
   21          | EXPR_SOMA • '-' EXPR_MULT
   39 EXPR_NOT: EXPR_SOMA •

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53

    '+'       [reduce using rule 39 (EXPR_NOT)]
    '-'       [reduce using rule 39 (EXPR_NOT)]
    $default  reduce using rule 39 (EXPR_NOT)


State 44

   38 EXPR_NOT: '!' EXPR_NOT •

    $default  reduce using rule 38 (EXPR_NOT)


State 45

   40 EXPR_ATOM: '(' EXPR • ')'

    ')'  shift, and go to state 67


State 46

    2 BLOCO: '{' COMANDOS '}' •

    $default  reduce using rule 2 (BLOCO)


State 47

    3 COMANDOS: COMANDO COMANDOS •

    $default  reduce using rule 3 (COMANDOS)


State 48

    5 COMANDO: DECLARACAO ';' •

    $default  reduce using rule 5 (COMANDO)


State 49

   13 DECLAR_VAR: TIPO TK_ID •
   14           | TIPO TK_ID • '=' EXPR_SOMA
   15           | TIPO TK_ID • '=' TK_CHAR
   16           | TIPO TK_ID • '=' EXPR_BOOL

    '='  shift, and go to state 68

    $default  reduce using rule 13 (DECLAR_VAR)


State 50

    6 COMANDO: ATRIB ';' •

    $default  reduce using rule 6 (COMANDO)


State 51

    7 COMANDO: EXPR ';' •

    $default  reduce using rule 7 (COMANDO)


State 52

   20 EXPR_SOMA: EXPR_SOMA '+' • EXPR_MULT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 19

    EXPR_MULT    go to state 69
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 53

   21 EXPR_SOMA: EXPR_SOMA '-' • EXPR_MULT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 19

    EXPR_MULT    go to state 70
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 54

   23 EXPR_MULT: EXPR_MULT '*' • EXPR_ATOM

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 19

    EXPR_ATOM    go to state 71
    COVERT_TYPE  go to state 35


State 55

   24 EXPR_MULT: EXPR_MULT '/' • EXPR_ATOM

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '('            shift, and go to state 19

    EXPR_ATOM    go to state 72
    COVERT_TYPE  go to state 35


State 56

   27 EXPR_LOG: EXPR_LOG TK_AND • EXPR_IGUAL

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_IGUAL   go to state 73
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 57

   28 EXPR_LOG: EXPR_LOG TK_OR • EXPR_IGUAL

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_IGUAL   go to state 74
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 58

   30 EXPR_IGUAL: EXPR_IGUAL TK_IGUAL • EXPR_COMP

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_COMP    go to state 75
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 59

   31 EXPR_IGUAL: EXPR_IGUAL TK_DIFERENTE • EXPR_COMP

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_COMP    go to state 76
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 60

   35 EXPR_COMP: EXPR_COMP TK_MAIOR_IGUAL • EXPR_NOT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_NOT     go to state 77
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 61

   36 EXPR_COMP: EXPR_COMP TK_MENOR_IGUAL • EXPR_NOT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_NOT     go to state 78
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 62

   34 EXPR_COMP: EXPR_COMP '<' • EXPR_NOT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_NOT     go to state 79
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 63

   33 EXPR_COMP: EXPR_COMP '>' • EXPR_NOT

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 43
    EXPR_MULT    go to state 28
    EXPR_NOT     go to state 80
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 64

   17 ATRIB: TK_ID '=' EXPR •

    $default  reduce using rule 17 (ATRIB)


State 65

   47 COVERT_TYPE: TK_TIPO_INT '(' EXPR • ')'

    ')'  shift, and go to state 81


State 66

   48 COVERT_TYPE: TK_TIPO_FLOAT '(' EXPR • ')'

    ')'  shift, and go to state 82


State 67

   40 EXPR_ATOM: '(' EXPR ')' •

    $default  reduce using rule 40 (EXPR_ATOM)


State 68

   14 DECLAR_VAR: TIPO TK_ID '=' • EXPR_SOMA
   15           | TIPO TK_ID '=' • TK_CHAR
   16           | TIPO TK_ID '=' • EXPR_BOOL

    TK_NUM         shift, and go to state 9
    TK_ID          shift, and go to state 39
    TK_TIPO_INT    shift, and go to state 40
    TK_TIPO_FLOAT  shift, and go to state 41
    TK_CHAR        shift, and go to state 83
    TK_BOOL_TRUE   shift, and go to state 15
    TK_BOOL_FALSE  shift, and go to state 16
    '-'            shift, and go to state 17
    '!'            shift, and go to state 18
    '('            shift, and go to state 19

    EXPR_SOMA    go to state 84
    EXPR_MULT    go to state 28
    EXPR_BOOL    go to state 85
    EXPR_LOG     go to state 30
    EXPR_IGUAL   go to state 31
    EXPR_COMP    go to state 32
    EXPR_NOT     go to state 33
    EXPR_ATOM    go to state 34
    COVERT_TYPE  go to state 35


State 69

   20 EXPR_SOMA: EXPR_SOMA '+' EXPR_MULT •
   23 EXPR_MULT: EXPR_MULT • '*' EXPR_ATOM
   24          | EXPR_MULT • '/' EXPR_ATOM

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 20 (EXPR_SOMA)


State 70

   21 EXPR_SOMA: EXPR_SOMA '-' EXPR_MULT •
   23 EXPR_MULT: EXPR_MULT • '*' EXPR_ATOM
   24          | EXPR_MULT • '/' EXPR_ATOM

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 21 (EXPR_SOMA)


State 71

   23 EXPR_MULT: EXPR_MULT '*' EXPR_ATOM •

    $default  reduce using rule 23 (EXPR_MULT)


State 72

   24 EXPR_MULT: EXPR_MULT '/' EXPR_ATOM •

    $default  reduce using rule 24 (EXPR_MULT)


State 73

   27 EXPR_LOG: EXPR_LOG TK_AND EXPR_IGUAL •
   30 EXPR_IGUAL: EXPR_IGUAL • TK_IGUAL EXPR_COMP
   31           | EXPR_IGUAL • TK_DIFERENTE EXPR_COMP

    TK_IGUAL      shift, and go to state 58
    TK_DIFERENTE  shift, and go to state 59

    $default  reduce using rule 27 (EXPR_LOG)


State 74
